# kompresija-projekat

./: CMakeLists.txt  CompressLZW.c  DecompressLZW.c  Dekoder_LZW.c  Enkoder_LZW.c  Makefile  bitArray.c  bitArray.h  bitFile.h  bitReader.c  bitWriter.c  createFileNames.c  getFileNames.c  getFileNames.h  hashtable.c  main.c  minHeap.h  parseFiles.c  parseFiles.h  staticHuffman.h
include/: bitFile.h  hashTable.h  huffman.h  huffman_common.h  lzw.h  minHeap.h  parseFiles.h
src/: main.c
src/bitFile/: bitReader.c  bitWriter.c
src/data-structures/: hashTable.c  minHeap.c
src/huffman/: adaptiveHuffman.c  staticHuffman.c
src/lzw/: CompressLZW.c  DecompressLZW.c
src/utils/: createFileNames.c  getFileNames.c
